# PowerFactoryApplications

./: .gitignore  assest_manager.py
old_backup/__ShortTermDatabase__/: .env.example  README.md  _dev_setup_.py  _powerfactory_app_.py  config.py  pyproject.toml
old_backup/__ShortTermDatabase__/_draft_database_/ibr_creator/: cs_creator.py  ibr_creator.py  models_fixing.py  models_fixing_pdce.py
old_backup/__ShortTermDatabase__/_draft_database_/projects_compiler/: main.py
old_backup/__ShortTermDatabase__/_draft_reliability_fixing_tool_/: class_changer.py  dispatch_extractor.py  gain_recalculating.py  long_term_renewable.py  model_modifier.py  renewable_model_changing.py
old_backup/__ShortTermDatabase__/db_preparation/: db_areas_assign.py  db_category_fixing.py  db_der_reaparing.py  db_variation_numering.py
old_backup/__ShortTermDatabase__/diagrams/: tool_mapper_integrator.drawio
old_backup/__ShortTermDatabase__/integrator/: __draft__.py  __init__.py  main.py
old_backup/__ShortTermDatabase__/integrator/data/: AASS_Loads.xlsx
old_backup/__ShortTermDatabase__/integrator/managers/: assest_manager.py  taps_manager.py
old_backup/__ShortTermDatabase__/integrator/models/: models.py  scenario_context.py
old_backup/__ShortTermDatabase__/integrator/modules/: db_demand_adjusting.py  db_dispatch_integrating.py  db_dyn_models_activating.py  db_govs_activating.py  db_ppc_activating.py  db_taps_adjustment.py  db_units_activating.py
old_backup/__ShortTermDatabase__/integrator/pipelines/: db_convergence.py  (+1 more)
old_backup/__ShortTermDatabase__/mapper/: main.py
(+45 files in other folders)
