[tool.poetry]
name = "shorttermdatabase"
version = "0.1.0"
description = "PowerFactory Short Term Analysis Tools"
authors = ["Gonzalo Sánchez <gonzalo.sanchez@coordinador.cl>"]
packages = [{include = "*"}]

[tool.poetry.dependencies]
python = ">=3.12"
ipykernel = "*"
pandas = "*"
numpy = "*"
pyarrow = "*"
XlsxWriter = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"